@startuml Class Diagram
skinparam classAttributeIconSize 0

/'
Class Diagram for the CleaverCooks
Version : 0.1.0
Date : 14.12.2023
'/

class Allergy{
    - id : String
    - title : String
}

class Ingredient{
    - id : String
    - title : String
    - allergies : Allergy[]
}


class Receipe{
    - id : String
    - title : String
    - description : String
    - elements : Element[]
}

class Element{
    - amount : String
    - unit : String
    - ingredient : Ingredient
}

Allergy <-- Ingredient
Receipe o-- Element
Element --* Ingredient
@enduml
